# symmer

./: .gitattributes  .gitignore  ADAPT-CS-VQE-Copy1.ipynb  ADAPT-CS-VQE.ipynb  LICENSE  README.md  generating_cs_vqe_errors.ipynb  hardware_spec.ipynb  pyproject.toml  readthedocs.yaml  testing.ipynb
SymRed/: __init__.py  symplectic_form.py
data/: Ar1_STO-3G_singlet_ArAr.json  B1_STO-3G_doublet_BB.json  Be1_STO-3G_singlet_BeBe.json  Br1_STO-3G_doublet_BrBr.json  C1-O1_STO-3G_singlet_COCO.json  C1-O2_STO-3G_singlet_CO2CO2.json  C1_STO-3G_triplet_CC.json  Cl1_STO-3G_doublet_ClCl.json  Cl1_STO-3G_singlet_-1-_Cl-Cl-.json  Cl2_STO-3G_singlet_Cl2Cl2.json  F1_STO-3G_doublet_FF.json  F2_STO-3G_singlet_F2F2.json  H1-Cl1_STO-3G_singlet_HclHcl.json  H1-F1_3-21G_singlet_HF_3-21GHF_3-21G.json  H1-F1_STO-3G_singlet_HFHF.json  H1-He1_3-21G_singlet_1+_HeH+_3-21GHeH+_3-21G.json  H1-He1_6-31+G**_singlet_1+_HeH+_6-31+G**HeH+_6-31+G**.json  H1-He1_6-311G**_singlet_1+_HeH+_6-311G**HeH+_6-311G**.json  H1-He1_6-311G*_singlet_1+_HeH+_6-311G*HeH+_6-311G*.json  H1-He1_6-31G*_singlet_1+_HeH+_6-31G*HeH+_6-31G*.json  H1-He1_6-31G_singlet_1+_HeH+_6-31GHeH+_6-31G.json  H1-He1_STO-3G_singlet_1+_HeH+_STO-3GHeH+_STO-3G.json  H1-Li1-O1_STO-3G_singlet_LiOHLiOH.json  H1-Li1_3-21G_singlet_LiH_3-21GLiH_3-21G.json  H1-Li1_STO-3G_singlet_LiHLiH.json  H1-Na1_STO-3G_singlet_NaHNaH.json  H1-O1-Na1_STO-3G_singlet_NaOHNaOH.json  H1-O1_STO-3G_singlet_-1-_OH-OH-.json  H1_STO-3G_doublet_HH.json  H2-Be1_STO-3G_singlet_BeH2BeH2.json  H2-C1-O1_STO-3G_singlet_MethanalMethanal.json  H2-C1_3-21G_triplet_CH2_3-21GCH2_3-21G.json  H2-C1_STO-3G_triplet_CH2CH2.json  H2-C1_STO-3G_triplet_CH2_3-21GCH2_3-21G.json  H2-C2_STO-3G_singlet_EthyneEthyne.json  H2-Mg1_STO-3G_singlet_MgH2MgH2.json  H2-O1_3-21G_singlet_H2O_3-21GH2O_3-21G.json  H2-O1_STO-3G_singlet_H2OH2O.json  H2-O2_STO-3G_singlet_Hydrogen_PeroxideHydrogen_Peroxide.json  H2-S1_STO-3G_singlet_H2SH2S.json  (+32 more)
notebooks/: ADAPT-CS-VQE.ipynb  Alexis Tap.ipynb  CISD_notes3  CS-VQE 2.0.ipynb  CS-VQE for Electronic Structure.ipynb  CS-VQE optimizer sandbox.ipynb  CS-VQE stabilizer selection.ipynb  CS-VQE_HOMO-LUMO_biasing.ipynb  CS-VQE_lightweight.ipynb  CS-VQE_noncontextual_projection_ansatz.ipynb  CS-VQE_stabilizers_by_CC.ipynb  CS_VQE usage.ipynb  Chemistry basic use.ipynb  Chemistry.ipynb  (+37 more)
(+317 files in other folders)
