[tool.poetry]
name = "symmer"
version = "0.0.4"
description = ""
authors = ["AlexisRalli <rallilex@hotmail.co.uk>", "TimWeaving <weaving.timothy@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8 <3.11"
openfermion = "^1.3.0"
cached-property = "^1.5.2"
qiskit = "^0.44.0"
pydocstyle = "^6.1.1"
isort = "^5.10.1"
black = "^22.1.0"
flake8 = "^4.0.1"
py3Dmol = "^1.8.0"
ncon = "^1.0.0"
opt-einsum = "^3.3.0"
qubovert = "^1.2.5"
pytest = "^7.2.2"
numba = "0.56"
quimb = "^1.5.1"
ray = "^2.6.3"
sphinx-design = "^0.5.0"
myst-nb = "^0.17.2"
sphinx-copybutton = "^0.5.2"
ipywidgets = "^8.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
