[tool.poetry]
name = "symmer"
version = "0.0.5"
description = ""
authors = ["AlexisRalli <rallilex@hotmail.co.uk>", "TimWeaving <weaving.timothy@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
openfermion = "^1.3.0"
cached-property = "^1.5.2"
py3Dmol = "^1.8.0"
ncon = "^1.0.0"
opt-einsum = "^3.3.0"
qubovert = "^1.2.5"
numba = "0.56"
quimb = "^1.5.1"
ray = "^2.6.3"
myst-nb = "^0.17.2"
ipywidgets = "^8.1.0"
qiskit = "^0.44.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pydocstyle = "^6.1.1"
flake8 = "^4.0.1"   
sphinx-copybutton = "^0.5.2"
sphinx-design = "^0.5.0"
isort = "^5.10.1"
black = "^22.1.0"
poetry = "^1.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
